<resources>
    <string name="app_name">Port@firmas</string>
    <string name="app_title">Port@firmas v1.3.1</string>
    <string name="close">Cerrar</string>
    <string name="error">Error</string>
    <string name="server_select">Servidores Portafirmas</string>
    <string name="enable_clavefirma">Firma con Cl@ve Firma</string>
    <string name="configure_notifications">Configuraci\u00F3n de notificaciones</string>
    <string name="title_notifications">Notificaci\u00F3n Portafirmas</string>
    <string name="enable_notifications">Habilitar notificaciones</string>
    <string name="disable_notifications">Deshabilitar notificaciones</string>
    <string name="aviso">Aviso</string>
    <string name="see_details">Ver detalle</string>
    <string name="sign_vb">Firmar/V\u00BAB\u00BA</string>
    <string name="sign">Firmar</string>
    <string name="vb">Visto Bueno</string>
    <string name="reject">Rechazar</string>
    <string name="filter">Filtrar</string>
    <string name="nofilter">Eliminar filtro</string>
    <string name="update">Actualizar</string>
    <string name="loading">Cargando\u002E\u002E\u002E</string>
    <string name="title_activity_petition_results_list">Lista de peticiones</string>
    <string name="title_unresolved_petition_list">Solicitudes pendientes</string>
    <string name="title_signed_petition_list">Solicitudes firmadas</string>
    <string name="title_rejected_petition_list">Solicitudes rechazadas</string>
    <string name="title_activity_login">Acceso al Portafirmas</string>
    <string name="help">Ayuda</string>
    <string name="logout">Cerrar Sesi\u00F3n</string>
    <string name="select_all">Seleccionar todas</string>
    <string name="unselect_all">Quitar selección</string>
    <string name="see_unresolves">Ver solicitudes pendientes</string>
    <string name="see_rejects">Ver solicitudes rechazadas</string>
    <string name="see_signeds">Ver solicitudes firmadas</string>
    <string name="question_sign_petition">\u00BFDesea firmar la solicitud seleccionada?</string>
    <string name="question_reject_petition">\u00BFDesea rechazar la solicitud seleccionada?</string>
    <string name="yes">S\u00ED</string>
    <string name="no">No</string>
    <string name="title_activity_request_details">Detalles del fichero</string>
    <string name="subject">Asunto</string>
    <string name="ref">Referencia</string>
    <string name="date">Fecha</string>
    <string name="expdate">Fecha de caducidad</string>
    <string name="application">Aplicaci\u00F3n</string>
    <string name="rejectReason">Motivo de rechazo</string>
    <string name="senders">Remitentes</string>
    <string name="docs">Documentos</string>
    <string name="attached">Anexos</string>
    <string name="details">Detalles</string>
    <string name="sign_lines">L\u00EDneas de firmas</string>
    <string name="no_detail_data">Sin especificar</string>
    <string name="doc_download">Descargas</string>
    <string name="doc_preview">Previsualizar</string>
    <string name="toast_downloading">Descargando el fichero</string>
    <string name="toast_error_previewing">No se ha podido previsualizar el documento</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="signfolder_logo">Logo del portafirmas</string>
    <string name="label_presentation_text">Portafirmas es el aplicativo m\u00F3vil de las administraciones p\u00FAblicas para acceder a sus servicios de portafirmas. Para poder acceder al servicio deber\u00E1n haberle dado de alta en el sistema y disponer del certificado digital necesario para su autenticaci\u00F3n importado en su dispositivo.</string>
    <string name="label_presentation_text_mini">Portafirmas es el aplicativo m\u00F3vil de las administraciones p\u00FAblicas para acceder a sus servicios de portafirmas. Para acceder al servicio deber\u00E1n haberle dado de alta en el sistema y disponer del certificado digital necesario para su autenticaci\u00F3n importado en su dispositivo.</string>
    <string name="button_import_cert">Importar certificado</string>
    <string name="button_login_local">Acceder con certificado</string>
    <string name="button_login_cloud">Acceder con Cl@ve</string>
    <string name="signline_header">L\u00EDnea %1$d de</string>
    <string name="sign_dialog_sign">Se va a firmar 1 petici\u00F3n.</string>
    <string name="sign_dialog_signs">Se van a firmar %d peticiones.</string>
    <string name="sign_dialog_approve">Se va a aprobar 1 petici\u00F3n.</string>
    <string name="sign_dialog_approves">Se van a aprobar %d peticiones.</string>
    <string name="sign_dialog_sign_approve">Se van a procesar %1$d %2$s de firma y %3$d de visto bueno.</string>
    <string name="request_notification">Tiene una petici\u00F3n pendiente</string>
    <string name="requests_notification">Tiene %d peticiones pendientes</string>
    <string name="sign_dialog_question">¿Desea continuar con la operaci\u00F3n?</string>
    <string name="loading_doc">Descargando documento\u002E\u002E\u002E</string>
    <string name="signs">Firmas</string>
    <string name="sign_reports">Informe de firmas</string>
    <string name="sign_filename">%1$s_firmado.%2$s</string>
    <string name="sign_report">report_%s.pdf</string>
    <string name="exp_date_requests">Solicitudes pr\u00F3ximas a caducar</string>
    <string name="reminding_requests">Solicitudes pendientes</string>
    <string name="approves_header_list">%1$s visto bueno</string>
    <string name="signatures_header_list">%1$s firma</string>
    <string name="signature_lines_header_list">Firma en %1$s</string>
    <string name="no_request_avaible">No hay peticiones en este listado</string>
    <string name="pagination_separator">%1$d/%2$d</string>
    <string name="img_cd_previous_page">Previous page</string>
    <string name="img_cd_next_page">Next page</string>
    <string name="img_cd_first_page">First page</string>
    <string name="img_cd_last_page">End page</string>
    <string name="title_configure_filter">Filtrado de peticiones</string>
    <string name="label_order">Ordenaci\u00F3n</string>
    <string name="label_order_rule">Criterio</string>
    <string name="label_filters">Filtros</string>
    <string name="label_filters_enable">Activar filtros</string>
    <string name="label_filters_by_subject">Asunto</string>
    <string name="label_filters_by_app">Aplicaci\u00F3n</string>
    <string name="label_filters_by_date_start">Fecha inicio</string>
    <string name="label_filters_by_date_end">Fecha fin</string>
    <string name="filter_order_attribute_date">Fecha</string>
    <string name="filter_order_attribute_subject">Asunto</string>
    <string name="filter_order_attribute_app">Aplicaci\u00F3n</string>
    <string name="error_msg_select_any_request">Seleccione al menos una solicitud de firma</string>
    <string name="error_msg_certificate_encoding">Error de codificaci\u00F3n del certificado</string>
    <string name="error_msg_communicating_server">Ha ocurrido un error de comunicaci\u00F3n con el servidor</string>
    <string name="error_msg_responding_server">Se obtuvo una respuesta incorrecta del servidor</string>
    <string name="error_msg_loading_requests">Error al cargar la lista de peticiones</string>
    <string name="error_msg_loading_request_details">Error al cargar los detalles de la petici\u00F3n</string>
    <string name="error_msg_check_connection">Por favor, compruebe su conexi\u00F3n. Para poder utilizar esta aplicaci\u00F3n es necesario que el dispositivo est\u00E9 conectado a la red.</string>
    <string name="error_msg_proxy_no_config">No se ha configurado correctamente la URL del servicio de Portafirmas.</string>
    <string name="error_msg_rejecting_requests">Ocurri\u00F3 un error al rechazar alguna de las peticiones seleccionadas.</string>
    <string name="error_msg_rejecting_request">Ocurri\u00F3 un error al rechazar la petici\u00F3n.</string>
    <string name="error_msg_procesing_requests">Ocurri\u00F3 un error al procesar alguna de las peticiones seleccionadas.</string>
    <string name="error_msg_procesing_request">Ocurri\u00F3 un error al procesar la petici\u00F3n.</string>
    <string name="error_msg_unsupported_device">Dispositivo no soportado.</string>
    <string name="error_loading_keystore">Error al cargar el almacen de claves</string>
    <string name="error_loading_certificate_alias">Error extrayendo los alias de los certificados del almacen</string>
    <string name="error_loading_certificate">No se ha podido cargar el certificado seleccionado para firmar</string>
    <string name="error_no_certs">No se han encontrado certificados instalados en su dispositivo</string>
    <string name="error_title_keystore_empty">Almac\u00E9n vac\u00EDo</string>
    <string name="toast_msg_rejects_ok">Las peticiones se han rechazado correctamente</string>
    <string name="toast_msg_reject_ok">La petici\u00F3n se ha rechazado correctamente</string>
    <string name="toast_msg_rejects_ko">Error rechazar %1$d de las %2$d peticiones seleccionadas</string>
    <string name="toast_msg_reject_ko">Error rechazar la petici\u00F3n seleccionada</string>
    <string name="toast_msg_signs_ok">Las peticiones se han firmado correctamente</string>
    <string name="toast_msg_sign_ok">La petici\u00F3n se ha firmado correctamente</string>
    <string name="toast_msg_signs_ko">Error al firmar %1$d de las %2$d peticiones seleccionadas</string>
    <string name="toast_msg_sign_ko">Error al firmar la petici\u00F3n seleccionada</string>
    <string name="toast_msg_download_ok">La firma se ha guardado correctamente en su directorio de Descargas</string>
    <string name="toast_msg_gcm_connection_ok">Se han habilitado las notificaciones en el dispositivo.</string>
    <string name="toast_msg_gcm_connection_ko">Error al conectar con el servidor de notificaciones.</string>
    <string name="toast_msg_fire_comunication_ko">No se ha podido establecer la comunicaci\u00F3n con Cl@ve Firma.</string>
    <string name="title_activity_cert_chooser">Importar certificado</string>
    <string name="title_clave_login">Login con Clave</string>
    <string name="file_chooser_directorio_actual">Directorio actual:</string>
    <string name="file_chooser_directorio">Directorio</string>
    <string name="file_chooser_directorio_padre">Directorio padre</string>
    <string name="file_chooser_tamano_del_fichero">Tama\u00F1o: %s</string>
    <string name="file_chooser_read_error">Error: No ha sido posible leer el fichero</string>
    <string name="title_fire_webview">Autorizaci\u00F3n de firma</string>
    <string name="ok">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="allow">Permitir</string>
    <string name="select">Seleccionar</string>
    <string name="dialog_msg_accessing_keystore">Accediendo al almac\u00E9n\u002E\u002E\u002E</string>
    <string name="dialog_msg_connection">Estableciendo conexi\u00F3n...</string>
    <string name="dialog_msg_authenticating">Autenticando usuario\u002E\u002E\u002E</string>
    <string name="dialog_msg_configurating">Configurando la aplicaci\u00F3n\u002E\u002E\u002E</string>
    <string name="dialog_msg_clave">Conectando con Cl@ve Firma</string>
    <string name="dialog_msg_clave_login_fail">Error de validaci\u00F3n con Cl@ve</string>
    <string name="dialog_msg_loading">Cargando\u002E\u002E\u002E</string>
    <string name="dialog_msg_signing_1">Firmando petici\u00F3n\u002E\u002E\u002E</string>
    <string name="dialog_msg_approving_1">Aprobando petici\u00F3n\u002E\u002E\u002E</string>
    <string name="dialog_msg_rejecting_1">Rechazando petici\u00F3n\u002E\u002E\u002E</string>
    <string name="dialog_msg_loading_petitions">Cargando peticiones\u002E\u002E\u002E</string>
    <string name="dialog_msg_processing_requests">Procesando peticiones\u002E\u002E\u002E</string>
    <string name="dialog_msg_loading_configuration">Cargando su configuraci\u00F3n\u002E\u002E\u002E</string>
</resources>